--- a/2.Code/s2-data-dianosis.Rmd
+++ b/2.Code/s2-data-dianosis.Rmd
@@ -7,6 +7,12 @@ output: html_document
 
 ```{r}
 library(ggplot2)
+library(socviz)
+library(hrbrthemes)
+library(ggrepel)
+library(psych)
+library(DataExplorer)
+
 ```
 
 
@@ -18,6 +24,8 @@ load("~/Covid-Cyber-Unemploy/0427weekly.RData")
 
 ```{r}
 summary(county_week_panel)
+plot_missing(county_week_panel)
+plot_missing(county_month_panel)
 ```
 
 
@@ -122,7 +130,4 @@ summary_outcome %>% filter(desc == "population")  %>% ggplot(aes( x = indicator 
 
 ```
 
-```{r}
-
-```
 
