1. import it group data (processed in HPC). 2. generage a series of "per_emp" variables.

--- a/2.Code/covid_cyber.Rmd
+++ b/2.Code/covid_cyber.Rmd
@@ -3,6 +3,7 @@ title: "Cybersecurity and Future of Working from Home"
 author: "LetingZhang"
 date: "11/22/2020"
 output: html_document
+change: Data cleaning process: using "s1-data-processing.R"
 ---
 
 # Preperation
